# parafinder

./: LICENSE  README.md  go.mod  go.sum  parafinder.go  paramfinder.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
pyproject/: pyproject.toml
