[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parafinder"
version = "3.0.0"
description = "ParaFinder Ultra – Professional Parameter & API Recon Suite"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "inteleon404", email = "inteleon404@proton.me" }
]
maintainers = [
    { name = "inteleon404", email = "inteleon404@proton.me" }
]
keywords = ["recon", "parameter discovery", "bugbounty", "pentest", "security", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "aiohttp>=3.9",
    "rich>=13.0"
]

[project.urls]
Homepage = "https://github.com/inteleon404/parafinder"
Repository = "https://github.com/inteleon404/parafinder"
Issues = "https://github.com/inteleon404/parafinder/issues"
Documentation = "https://github.com/inteleon404/parafinder#readme"

[project.scripts]
parafinder = "parafinder:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff"
]

[tool.hatch.build]
include = [
    "parafinder.py",
    "README.md",
    "LICENSE"
]
